# sdl3-games

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  Info.plist.in  LaunchScreen.storyboard
.github/workflows/: deploy.yml
src/: game.c  game.h  main.c  nk_sdl3.c  nk_sdl3.h  render.c  sprites.c  sprites.h  ui.c  ui.h
web/: shell.html
